<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <name>Halcyon Project</name>
    <groupId>com.ebremer.HalcyonProject</groupId>
    <artifactId>HalcyonProject</artifactId>
    <packaging>pom</packaging>
    <version>1.0.1</version>
    <description>A whole slide image annotation, management, and visualization system</description>
    
    <modules>
        <module>halcyon-core</module>
        <module>Halcyon</module>
        <module>ingest</module>
    </modules>
    
    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>
    
    <issueManagement>
        <system>github</system>
        <url>https://github.com/halcyon-project/Halcyon/issues</url>
    </issueManagement>
    
    <developers>
        <developer>
          <id>ebremer</id>
          <name>Erich Bremer</name>
          <email>erich.bremer@stonybrook.edu</email>
          <roles>
              <role>architect</role>
              <role>developer</role>
          </roles>
          <timezone>America/New_York</timezone>
          <url>http://www.ebremer.com</url>
          <organization>Stony Brook University - Biomedical Informatics</organization>
        </developer>
        <developer>
          <id>tdiprima</id>
          <name>Tammy DiPrima</name>
          <email>tammy.diprima@stonybrook.edu</email>
          <roles><role>developer</role></roles>
          <timezone>America/New_York</timezone>
          <url>https://bmi.stonybrookmedicine.edu/people/Tammy_DiPrima</url>
          <organization>Stony Brook University - Biomedical Informatics</organization>
        </developer>
        <developer>
          <id>jbalsamo</id>
          <name>Joseph Balsamo</name>
          <email>joseph.balsamo@stonybrook.edu</email>
          <roles><role>developer</role></roles>
          <timezone>America/New_York</timezone>
          <organization>Stony Brook University - Biomedical Informatics</organization>
        </developer>
        <developer>
          <id>fwang</id>
          <name>Feiqiao Wang</name>
          <email>feiqiao.wang@stonybrook.edu</email>
          <roles><role>developer</role></roles>
          <timezone>America/New_York</timezone>
          <organization>Stony Brook University - Biomedical Informatics</organization>
        </developer>
    </developers>
    
    <organization>
        <name>Stony Brook University - Biomedical Informatics</name>
        <url>https://bmi.stonybrookmedicine.edu/</url>
    </organization>
    
    <inceptionYear>2021</inceptionYear>
    
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <jena.version>4.10.0</jena.version>
        <wicket.ver>9.13.0</wicket.ver>
        <hilbert.ver>0.2.2</hilbert.ver>
        <commons-pool2.ver>2.12.0</commons-pool2.ver>
        <jakarta.json.version>2.0.1</jakarta.json.version> 
        <titanium-json-ld.ver>1.3.3</titanium-json-ld.ver>
        <dcm4che.ver>5.29.2</dcm4che.ver>
        <beakgraph.version>0.8.0</beakgraph.version>
        <keycloak.version>21.1.1</keycloak.version>
	<infinispan.version>14.0.8.Final</infinispan.version>
	<resteasy.version>4.7.7.Final</resteasy.version>
	<micrometer.version>1.10.3</micrometer.version>
	<liquibase.version>4.20.0</liquibase.version>
	<snakeyaml.version>2.0</snakeyaml.version>
        <shiro.version>1.13.0</shiro.version>
        <jts.version>1.19.0</jts.version>
        <twelvemonkeys.version>3.10.1</twelvemonkeys.version>
        <springboot.version>2.7.17</springboot.version>
        <log4j.version>2.21.1</log4j.version>
        <jcommander.version>1.82</jcommander.version>
    </properties>
    
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${springboot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.jena</groupId>
                <artifactId>apache-jena-libs</artifactId>
                <version>${jena.version}</version>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>org.apache.jena</groupId>
                <artifactId>jena-querybuilder</artifactId>
                <version>${jena.version}</version>
                <type>jar</type>
            </dependency>
            <dependency>
                <groupId>org.apache.jena</groupId>
                <artifactId>jena-permissions</artifactId>
                <type>jar</type>
                <version>${jena.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.jena</groupId>
                <artifactId>jena-fuseki-main</artifactId>
                <version>${jena.version}</version>
            </dependency>
            <dependency>
                <groupId>io.micrometer</groupId>
                <artifactId>micrometer-registry-prometheus</artifactId>
                <version>${micrometer.version}</version>
            </dependency>
            
            <dependency>
                <groupId>com.github.ben-manes.caffeine</groupId>
                <artifactId>caffeine</artifactId>
                <version>3.1.8</version>
            </dependency>
            <dependency>
                <groupId>org.infinispan</groupId>
                <artifactId>infinispan-core</artifactId>
                <version>${infinispan.version}</version>
            </dependency>
            <dependency>
                <groupId>org.infinispan</groupId>
                <artifactId>infinispan-api</artifactId>
                <version>${infinispan.version}</version>
            </dependency>
            <dependency>
                <groupId>org.infinispan</groupId>
                <artifactId>infinispan-cachestore-remote</artifactId>
                <version>${infinispan.version}</version>
            </dependency>
            <dependency>
                <groupId>org.infinispan</groupId>
                <artifactId>infinispan-client-hotrod</artifactId>
                <version>${infinispan.version}</version>
            </dependency>
            <dependency>
                <groupId>org.infinispan</groupId>
                <artifactId>infinispan-commons</artifactId>
                <version>${infinispan.version}</version>
            </dependency>
            <dependency>
                <groupId>org.infinispan</groupId>
                <artifactId>infinispan-jboss-marshalling</artifactId>
                <version>${infinispan.version}</version>
            </dependency>
            <dependency>
                <groupId>org.infinispan</groupId>
                <artifactId>infinispan-multimap</artifactId>
                <version>${infinispan.version}</version>
            </dependency>
            <dependency>
                <groupId>org.infinispan</groupId>
                <artifactId>infinispan-query-dsl</artifactId>
                <version>${infinispan.version}</version>
            </dependency>
            <dependency>
                <groupId>org.infinispan</groupId>
                <artifactId>infinispan-remote-query-client</artifactId>
                <version>${infinispan.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>1.18.30</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>com.twelvemonkeys.imageio</groupId>
                <artifactId>imageio-tiff</artifactId>
                <version>${twelvemonkeys.version}</version>
            </dependency>
            <dependency>
                <groupId>org.liquibase</groupId>
                <artifactId>liquibase-core</artifactId>
                <version>${liquibase.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.yaml</groupId>
                        <artifactId>snakeyaml</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>org.apache.commons</groupId>
                        <artifactId>commons-text</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.yaml</groupId>
                <artifactId>snakeyaml</artifactId>
                <version>${snakeyaml.version}</version>
            </dependency>
            
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-api</artifactId>
                <version>${log4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-core</artifactId>
                <version>${log4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-slf4j-impl</artifactId>
                <version>${log4j.version}</version>
            </dependency>
            <dependency>
                <groupId>com.apicatalog</groupId>
                <artifactId>titanium-json-ld</artifactId>
                <version>${titanium-json-ld.ver}</version>
            </dependency>
            <dependency>
                <groupId>com.ebremer</groupId>
                <artifactId>BeakGraph</artifactId>
                <version>${beakgraph.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>com.apicatalog</groupId>
                        <artifactId>titanium-json-ld</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.locationtech.jts</groupId>
                <artifactId>jts-core</artifactId>
                <version>${jts.version}</version>
            </dependency>
             <dependency>
                <groupId>com.beust</groupId>
                <artifactId>jcommander</artifactId>
                <version>${jcommander.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    
    <pluginRepositories>
        <pluginRepository>
            <id>spring-release</id>
            <name>Spring release</name>
            <url>https://repo.spring.io/release</url>
        </pluginRepository>
    </pluginRepositories>
    <repositories>
        <repository>
          <id>halcyon</id>
            <name>Halcyon</name>
            <url>https://cursus.bmi.stonybrookmedicine.edu/releases</url>
        </repository>
        <repository>
            <id>spring-release</id>
            <name>Spring release</name>
            <url>https://repo.spring.io/release</url>
        </repository>
        <repository>
            <id>dcm4che</id>
            <name>dcm4che</name>
            <url>https://www.dcm4che.org/maven2</url>
        </repository>
    </repositories>
    <distributionManagement>
        <repository>
            <id>halcyon</id>
            <url>https://cursus.bmi.stonybrookmedicine.edu/releases</url>
        </repository>
    </distributionManagement>
</project>
